# gpuAgnosticFunctor

./: LICENSE
agnosticVersion/: CMakeLists.txt  buildAllVersions.sh  cudaDeviceHeader.cuh  ompDevice.hpp  ompDeviceHeader.hpp  simpleExample.cpp  simpleExample.cu  syclDevice.hpp  syclDeviceHeader.hpp
pureCudaVersion/: CMakeLists.txt  simpleExample.cu  simpleExampleOnlyCUDA.cu
